# resp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/architecture-doc/: SKILL.md
.claude/skills/audit/: SKILL.md
.claude/skills/audit-production/: SKILL.md
.claude/skills/audit-safety/: SKILL.md
.claude/skills/audit-security/: SKILL.md
.claude/skills/audit-testing/: SKILL.md
.claude/skills/brand/: verbal-identity.md
.claude/skills/write-docs/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: resp.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: codec.rs  encode.rs  error.rs  lib.rs  parse.rs  value.rs
tests/: error_paths.rs  framed.rs  redis.rs  roundtrip.rs
tests/common/: mod.rs
