[package]
name = "beyond-resp"
version = "0.1.1"
edition = "2021"
description = "RESP2/RESP3 wire protocol codec"
license = "MIT"

[features]
monoio = ["dep:monoio-codec"]

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
thiserror = "2"
itoa = "1"
ryu = "1"
memchr = "2"
monoio-codec = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
divan = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }

[[bench]]
name = "resp"
harness = false
