[package]
name = "beyond-resp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

[dependencies.beyond-resp]
path = ".."

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false
